@@ -78,6 +78,14 @@ LINESTRING (40 180, 120 120, 140 200, 140 200, 200 140, 240 200)
    </case>
 
    <case>
+      <desc>L - linestring with two identical points </desc>
+      <a>MULTILINESTRING((1 1, 0 0), (0 0, 0 0))</a>
+      <test>
+         <op name="isValid" arg1="A">      false      </op>
+      </test>
+   </case>
+
+   <case>
       <desc>A - zero-area polygon </desc>
       <a>POLYGON ((0 0, 0 0, 0 0, 0 0, 0 0))</a>
       <test>
